[gd_scene load_steps=38 format=2]

[ext_resource path="res://objects/player/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/character.png" type="Texture" id=2]
[ext_resource path="res://sprites/osb_left.png" type="Texture" id=3]
[ext_resource path="res://sprites/osb_right.png" type="Texture" id=4]
[ext_resource path="res://sprites/osb_jump.png" type="Texture" id=5]
[ext_resource path="res://sprites/osb_fire.png" type="Texture" id=6]
[ext_resource path="res://Audio/sound_shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/sound_jump.wav" type="AudioStream" id=8]
[ext_resource path="res://sprites/enemies.png" type="Texture" id=9]
[ext_resource path="res://tiles/transition.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 15.0
height = 9.0

[sub_resource type="Animation" id=2]

resource_name = "action_"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=3]

resource_name = "action_mage"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="Animation" id=4]

resource_name = "action_tank"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=5]

length = 0.01
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=6]

resource_name = "crouch_mage"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=7]

resource_name = "crouch_tank"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 42 ]
}

[sub_resource type="Animation" id=8]

length = 0.01
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=9]

resource_name = "falling_mage"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=10]

resource_name = "falling_tank"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 41 ]
}

[sub_resource type="Animation" id=11]

length = 0.01
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 3.5, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 17, 18, 16, 19, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=12]

resource_name = "idle_mage"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=28]

resource_name = "idle_tank"
length = 1.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 36 ]
}

[sub_resource type="Animation" id=29]

length = 0.01
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=30]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=31]

resource_name = "jumping_tank"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 40 ]
}

[sub_resource type="Animation" id=32]

length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=33]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=34]

resource_name = "run_tank"
length = 0.16
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=35]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=36]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=37]

resource_name = "sliding_tank"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 43 ]
}

[sub_resource type="RayShape2D" id=38]

custom_solver_bias = 0.0
length = 25.0

[sub_resource type="Animation" id=24]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("cloud:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=25]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("transition_box:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 6, 3 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=26]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("transition_box:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 3 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=27]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("transition_box:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 6, 3 ) ]
}

[node name="player" type="RigidBody2D" index="0"]

input_pickable = false
collision_layer = 32
collision_mask = 97
mode = 2
mass = 3.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 3
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Pickable", "Transform" ]

[node name="Capsule" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, -2 )
shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="invincibility_timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 2.5
one_shot = true
autostart = false

[node name="flash_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.03
one_shot = false
autostart = false

[node name="sprite" type="Sprite" parent="." index="3"]

position = Vector2( 0, 5.11584 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 43
_sections_unfolded = [ "Animation", "Material", "Offset", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="anim" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/action_ = SubResource( 2 )
anims/action_mage = SubResource( 3 )
anims/action_tank = SubResource( 4 )
anims/crouch_ = SubResource( 5 )
anims/crouch_mage = SubResource( 6 )
anims/crouch_tank = SubResource( 7 )
anims/falling_ = SubResource( 8 )
anims/falling_mage = SubResource( 9 )
anims/falling_tank = SubResource( 10 )
anims/idle_ = SubResource( 11 )
anims/idle_mage = SubResource( 12 )
anims/idle_tank = SubResource( 28 )
anims/jumping_ = SubResource( 29 )
anims/jumping_mage = SubResource( 30 )
anims/jumping_tank = SubResource( 31 )
anims/run_ = SubResource( 32 )
anims/run_mage = SubResource( 33 )
anims/run_tank = SubResource( 34 )
anims/sliding_ = SubResource( 35 )
anims/sliding_mage = SubResource( 36 )
anims/sliding_tank = SubResource( 37 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="camera" type="Camera2D" parent="." index="5"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = 0
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="bullet_shoot" type="Position2D" parent="." index="6"]

position = Vector2( 21.0492, 8.95297 )

[node name="ui" type="CanvasLayer" parent="." index="7"]

editor/display_folded = true
layer = 0
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="left" type="TouchScreenButton" parent="ui" index="0"]

position = Vector2( 27.7593, 360.87 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="ui" index="1"]

position = Vector2( 121.542, 361.415 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="jump" type="TouchScreenButton" parent="ui" index="2"]

position = Vector2( 666.224, 359.02 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "jump"
visibility_mode = 1

[node name="fire" type="TouchScreenButton" parent="ui" index="3"]

position = Vector2( 668.073, 262.788 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "shoot"
visibility_mode = 1

[node name="sound_shoot" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sound_jump" type="AudioStreamPlayer2D" parent="." index="9"]

position = Vector2( 0.155655, 1.48254 )
stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Ray" type="CollisionShape2D" parent="." index="10"]

shape = SubResource( 38 )

[node name="cloud" type="Sprite" parent="." index="11"]

scale = Vector2( 4, 4 )
texture = ExtResource( 9 )
vframes = 16
hframes = 16
frame = 24
_sections_unfolded = [ "Animation", "Transform" ]

[node name="transition_box" type="Sprite" parent="." index="12"]

pause_mode = 2
scale = Vector2( 1e-05, 1e-05 )
z_index = 5
texture = ExtResource( 10 )
_sections_unfolded = [ "Pause", "Transform", "Z Index" ]

[node name="poof" type="AnimationPlayer" parent="." index="13"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/poof = SubResource( 24 )
blend_times = [  ]

[node name="transition" type="AnimationPlayer" parent="." index="14"]

pause_mode = 2
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 25 )
anims/in = SubResource( 26 )
anims/out = SubResource( 27 )
blend_times = [  ]
_sections_unfolded = [ "Pause" ]

[connection signal="timeout" from="invincibility_timer" to="." method="_on_invincibility_timer_timeout"]

[connection signal="timeout" from="flash_timer" to="." method="_on_flash_timer_timeout"]


